--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rollup -c",
     "build:docs": "typedoc --theme minimal --out ./docs ./lib/index.ts",
     "watch": "rollup -cw",
@@ -35,10 +35,25 @@
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rollup": "^2.38.0",
     "rollup-plugin-typescript2": "^0.29.0",
+    "ts-jest": "^26.4.4",
     "typedoc": "^0.20.17",
     "typescript": "^4.1.3"
+  },
+  "ava": {
+    "typescript": {
+      "extensions": [
+        "ts"
+      ],
+      "require": [
+        "ts-node/register"
+      ],
+      "rewritePaths": {
+        "src/": "build/"
+      }
+    }
   }
 }
